# ChangeLog for net-im/psi-videostatus
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  +psi-videostatus-0.0.6_pre3076.ebuild:
  version bump
