@@ -1,5 +1,7 @@
 DIST psi-videostatus-0.0.6_pre3076.tar.xz 5424 RMD160 cdcce02469418bfa0567e8fde7e3d1e4b89ff6a6 SHA1 6d111584318a96ce2521d7f7fddb7e8011bccf09 SHA256 c8c825f85bf2ef951880661c7bd59c550ae84f28e9fc8234100dd9192c59109f
+DIST psi-videostatus-0.0.6_pre3438.tar.xz 5660 RMD160 da0c88d7c263e9a0eb02d0feca50863c200884cf SHA1 41b4594e8ed376290468063144753199db1d95d1 SHA256 75b5fbd11dd1a0f800404a795d8670790e5a40e088a54686afdabf07ac649dcd
 EBUILD psi-videostatus-0.0.6_pre3076.ebuild 257 RMD160 ba486b48cf812765d10aec697ae358d6de8928b9 SHA1 ebdfb912d40de5002d06e5777e3db9d88b98b33d SHA256 cf3bd55c36375973989219f83ee4ccba7866ef05b80b175c61d94ab26c1063b2
+EBUILD psi-videostatus-0.0.6_pre3438.ebuild 257 RMD160 ba486b48cf812765d10aec697ae358d6de8928b9 SHA1 ebdfb912d40de5002d06e5777e3db9d88b98b33d SHA256 cf3bd55c36375973989219f83ee4ccba7866ef05b80b175c61d94ab26c1063b2
 EBUILD psi-videostatus-9999.ebuild 248 RMD160 3748c78aaf45d2c32eb76734504cf6cd99f6f712 SHA1 1178090823c7ade74646c5ae9d41e288a4013a98 SHA256 5b47e636494e23cbef4d0328a3fd4dc95ed30017a535f2ab8768aac677456838
-MISC ChangeLog 223 RMD160 2f9a641a7e0a74feae9da7e9c2472023a446d8e2 SHA1 8b0f7820deed729ceb9415446237cde72b731fd0 SHA256 834426f6a1a30d489c25d9872df884ad02a2ada3d29490b73648e1f59779c5aa
+MISC ChangeLog 323 RMD160 a74301cc3e5b0a36f8b3c15c3ad65913eab48cf6 SHA1 a2bfe383dfaefd0e2cb11a1996e328d3c915ed55 SHA256 392a1de4ea172f0251260267a9e76227ee32698861fb38bc09b3b5956c2cda6e
 MISC metadata.xml 400 RMD160 1c4551fc4282a8e9fd8b59356ea7dc40f59651af SHA1 4e5bc70cee8a594b71c652c5a8f008a37a1343be SHA256 85a7551f1c6ebd16563445b74e84cfe175f409d17e5792f4688971e7d8f70927
